--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "happy-dom": "^14.3.9",
     "localforage": "^1.10.0",
     "lucide-react": "^0.315.0",
     "match-sorter": "^6.3.3",
@@ -42,6 +43,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
