--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test": "bun test",
     "generate": "drizzle-kit generate:pg",
     "migrate": "bun src/db/migrate.ts",
+    "seed": "bun src/db/seed.ts",
     "studio": "bunx drizzle-kit studio"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.30.4",
     "elysia": "^0.8.17",
