--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,17 @@
     "generate": "drizzle-kit generate:pg",
     "migrate": "bun src/db/migrate.ts",
     "seed": "bun src/db/seed.ts",
-    "studio": "bunx drizzle-kit studio"
+    "studio": "bunx drizzle-kit studio",
+    "lint": "eslint --fix src --ext ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "chalk": "^5.3.0",
     "drizzle-kit": "^0.20.14",
-    "pg": "^8.11.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+    "eslint": "^8.57.0",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "pg": "^8.11.5",
+    "typescript": "^5.4.4"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
