--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.8.0",
+    "@elysiajs/jwt": "^1.0.2",
     "@faker-js/faker": "^8.4.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.30.4",
