--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "chalk": "^5.3.0",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "latest",
     "eslint": "^8.57.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.11.5",
@@ -27,8 +27,9 @@
     "@elysiajs/jwt": "^1.0.2",
     "@faker-js/faker": "^8.4.1",
     "@paralleldrive/cuid2": "^2.2.2",
+    "dayjs": "^1.11.11",
     "drizzle-orm": "^0.30.4",
-    "elysia": "^0.8.17",
+    "elysia": "1.0.7",
     "postgres": "^3.4.4",
     "zod": "^3.22.4"
   }
