--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "chalk": "^5.3.0",
-    "drizzle-kit": "latest",
+    "drizzle-kit": "0.21.1",
     "eslint": "^8.57.0",
     "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.11.5",
