--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/nodemailer": "^6.4.15",
     "chalk": "^5.3.0",
     "drizzle-kit": "0.21.1",
     "eslint": "^8.57.0",
@@ -31,6 +32,7 @@
     "dayjs": "^1.11.11",
     "drizzle-orm": "^0.30.4",
     "elysia": "1.0.7",
+    "nodemailer": "^6.9.13",
     "postgres": "^3.4.4",
     "zod": "^3.22.4"
   }
